[tool.poetry]
name = "cps1-docs"
version = "0.0.1"
authors = ["CPS1"]
description = "CPS1 Documentation"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
mkdocs-material = {version = "*", extras = ["imaging"]}
python = "3.13.5"
mike = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
